--- a/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/formAssignmentEn.html
+++ b/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/formAssignmentEn.html
@@ -80,7 +80,8 @@
     </div>
     </div>
     <div style="text-align: right;" id="div_image">
-        <img src="img/logo.png" id="logo_company" height="40" width="40">
+        <img id="logo_company" src="/ru/greatlarder/technicalassistant/html/img/logo.png" height="40" width="40" alt="img">
+        <img src="cid:some-image-cid" height="40" width="40" alt="img" />
     </div>
 </div>
 </body>
