--- a/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/formAssignmentRu.html
+++ b/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/formAssignmentRu.html
@@ -87,8 +87,8 @@
         </div>
     </div>
     <div style="text-align: right;">
-        <img id="logo_company" src='cid:image' height="40" width="40">
-        <!--src="/ru/greatlarder/technicalassistant/html/img/logo.png"-->
+        <img id="logo_company" src="/ru/greatlarder/technicalassistant/html/img/logo.png" height="40" width="40" alt="img">
+        <img src="cid:some-image-cid" height="40" width="40" alt="img" />
     </div>
 </div>
 </body>
