--- a/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/letter_application_en.html
+++ b/Technical-Assistant/src/main/resources/ru/greatlarder/technicalassistant/html/letter_application_en.html
@@ -39,5 +39,13 @@
     <b style=" display: inline; ">Note : </b>
     <p id="p_note" style=" display: inline; "> </p>
 </div>
+<div style="display: flex; align-items: center;">
+    <img src="cid:some-image-cid" height="100" width="100" alt="img" style=" display: inline; ">
+    <ul>
+        <li><p style=" display: inline;">Телефон: &nbsp &nbsp</p><p id = "phone_user" style=" display: inline; "></p></li>
+        <li><p style=" display: inline;">Почта: &nbsp &nbsp</p><p id = "mail_user" style=" display: inline; "></p></li>
+        <li><p style=" display: inline;">Адрес: &nbsp &nbsp</p><p id = "address_user" style=" display: inline; "></p></li>
+    </ul>
+</div>
 </body>
 </html>
